[gd_scene load_steps=8 format=3 uid="uid://deyiwxmivrrey"]

[ext_resource type="Script" uid="uid://c7ocr3ir2a3pf" path="res://scripts/player/player.gd" id="1_3hfu2"]
[ext_resource type="Script" uid="uid://cd67pbd42aewg" path="res://scripts/player/gun.gd" id="2_ar13e"]
[ext_resource type="PackedScene" uid="uid://ddhmq5t0ada46" path="res://saa.tscn" id="2_mjudt"]
[ext_resource type="Script" uid="uid://x38m1m88e1u2" path="res://scenes/player/crosshair.gd" id="4_0icub"]
[ext_resource type="Script" uid="uid://bxjs7bck8ax4d" path="res://scripts/sound/PlayerSFX.gd" id="4_ar13e"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7dm0k"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_7dm0k"]

[node name="PlayerCharacter" type="CharacterBody3D"]
collision_mask = 6
script = ExtResource("1_3hfu2")

[node name="FatigueTimer" type="Timer" parent="."]
wait_time = 0.8
autostart = true

[node name="SprintTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="TrappedTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="PillCollider" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_7dm0k")

[node name="Gun" type="Node3D" parent="."]
script = ExtResource("2_ar13e")

[node name="SAA4" parent="Gun" instance=ExtResource("2_mjudt")]
unique_name_in_owner = true
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0.9769592)

[node name="SwayTimer" type="Timer" parent="Gun"]
unique_name_in_owner = true
wait_time = 0.4
autostart = true

[node name="CrosshairTimer" type="Timer" parent="Gun"]
wait_time = 0.15
autostart = true

[node name="Crosshair" type="Node" parent="Gun"]
script = ExtResource("4_0icub")

[node name="Meshes" type="Node3D" parent="."]

[node name="PlayerMesh" type="Node3D" parent="Meshes"]

[node name="BodyMesh" type="MeshInstance3D" parent="Meshes/PlayerMesh"]
mesh = SubResource("CapsuleMesh_7dm0k")
skeleton = NodePath("../../..")

[node name="GameCamera" type="Camera3D" parent="."]
transform = Transform3D(1, -2.5121479e-15, 2.512148e-15, 0, 0.7071068, 0.70710677, -3.5527137e-15, -0.70710677, 0.7071068, 0, 4.96, 4.69)
size = 8.684
near = 0.001

[node name="PlayerSFX" type="Node" parent="."]
script = ExtResource("4_ar13e")

[node name="DamagePlayer" type="AudioStreamPlayer" parent="PlayerSFX"]

[node name="FootstepPlayer" type="AudioStreamPlayer" parent="PlayerSFX"]

[node name="GunshotPlayer" type="AudioStreamPlayer" parent="PlayerSFX"]

[node name="HealthPlayer" type="AudioStreamPlayer" parent="PlayerSFX"]

[node name="StepTimer" type="Timer" parent="PlayerSFX"]
unique_name_in_owner = true
wait_time = 0.3

[connection signal="timeout" from="FatigueTimer" to="." method="_on_fatigue_timer_timeout"]
[connection signal="timeout" from="SprintTimer" to="." method="_on_sprint_timer_timeout"]
[connection signal="timeout" from="TrappedTimer" to="." method="_on_trapped_timer_timeout"]
[connection signal="timeout" from="Gun/SwayTimer" to="Gun" method="_on_sway_timer_timeout"]
[connection signal="timeout" from="Gun/CrosshairTimer" to="Gun" method="_on_crosshair_timer_timeout"]
[connection signal="timeout" from="PlayerSFX/StepTimer" to="PlayerSFX" method="_on_step_timer_timeout"]
